# Health-Insurance-Claim-Adjudication-System

./: .env.example  .gitignore  Dockerfile.adjudication  Dockerfile.ingestion  Dockerfile.streamlit  README.md  answer.py  docker-compose.yml  drop_table.py  main.py  pyproject.toml  settlement_statement.json  submission_readme.md
adjudication/: claim_parser.py  engine.py  main.py  schemas.py  tracker.py
adjudication/api/: routes.py
config/: section_patterns.yml
extraction/: client.py  prompts.py
extraction/extractors/: exclusions.py  table_of_benefits.py
ingestion/: main.py  pipeline.py
ingestion/api/: routes.py
ingestion/compilation/: compiler.py  override_resolver.py  snapshot.py
ingestion/extraction/: client.py  prompts.py  schemas.py
ingestion/extraction/extractors/: conditions.py  endorsements.py  exclusions.py  table_of_benefits.py
ingestion/parsing/: docling.ipynb  document_parser.py  section_splitter.py
ingestion/storage/: models.py  policy_store.py
ingestion/tests/: main.py
snapshots/: POL-2026-A1_68938e527580dc62.yaml  POL-2026-A1_bbc88aca869e0285.yaml  test_001_774f7af2fc8c47ad.yaml  test_001_bcaed7b377368a84.yaml  test_002_2c6d23bef9a453bd.yaml  test_002_57571af686675adf.yaml  test_002_74c924c33a2a2880.yaml  test_002_9f07d235f78c3969.yaml  test_003_61b5eb7f6f068da3.yaml  test_003_6e1ee85805f1e9bc.yaml  test_003_b181c49f73e09a51.yaml  test_004_4cb5a5d7e562c53c.yaml
streamlit_app/: app.py
