[project]
name = "health-insurance-claim-adjudication-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "docling>=2.104.0",
    "instructor>=1.15.3",
    "openai>=2.43.0",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
]
