[project]
name = "health-insurance-claim-adjudication-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "docling>=2.104.0",
    "fastapi>=0.138.0",
    "greenlet>=3.5.2",
    "instructor>=1.15.3",
    "openai>=2.43.0",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "python-multipart>=0.0.32",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.51",
    "structlog>=26.1.0",
    "uvicorn>=0.49.0",
]
